feat: add support for lunatic metrics version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 repository = "https://github.com/tqwewe/lunatic-cached-process"
 
 [dependencies]
-lunatic = "0.12.1"
+lunatic = { git = "https://github.com/tqwewe/lunatic-rs", branch = "metrics" }
 serde = { version = "1.0.152", features = ["derive"] }
 paste = "1.0.11"
 
